# eosio-bigint

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
evm/: CMakeCache.txt  Makefile  cmake_install.cmake  evm.abi  evm.wasm
include/: account.h  bigint.h  checksum.hpp  disassembler.h  evm.hpp  opcode.h  rlp.h  stack.h  test.hpp  trace.h  transaction.h  util.h
include/intx/: int128.hpp  intx.hpp
include/keccak/: KeccakHash.c  KeccakHash.h
include/sha3/: byte_order.h  sha3.c  sha3.h
src/: CMakeLists.txt  disassembler.cpp  div.cpp  evm.cpp  processor.cpp  stack.cpp  test.cpp  transaction.cpp  transfer.cpp  util.cpp  utils.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
test_project-prefix/tmp/: test_project-cfgcmd.txt
